# PooProjeto

./: .gitignore  CMakeLists.txt  Habitacao.cpp  Processador.cpp  Propriedades.cpp  Regras.cpp  Sensores.h  main.cpp
PooProjeto/: Aparelhos.cpp  Aparelhos.h  CMakeLists.txt  CicloTratarComandos.cpp  CicloTratarComandos.h  Data.cpp  Data.h  Executa.cpp  Executa.h  Habitacao.cpp  Habitacao.h  Interface.cpp  Interface.h  Leitura.cpp  Leitura.h  Main antigo(para o caso de merda) .cpp  MyPointer.cpp  MyPointer.h  Processador.cpp  Processador.h  Propriedades.cpp  Propriedades.h  Regras.cpp  Regras.h  Sensor.h  Sensores.cpp  Sensores.h  Validacao.cpp  Validacao.h  Zonas.cpp  Zonas.h  comandosOutput.cpp  comandosOutput.h  interfaceClassTesting.cpp  interfaceClassTesting.h  main.cpp  utils.cpp  utils.h  window.cpp  window.h
PooProjeto/Aparelhos/: Aquecedor.cpp  Aquecedor.h  Aspersor.cpp  Aspersor.h  Lampada.cpp  Lampada.h  Refrigerador.cpp  Refrigerador.h  headerAparelhos.h
PooProjeto/Regras/: HeaderRegras.h  Regras_Humidade.cpp  Regras_Humidade.h  regrasFumo.cpp  regrasFumo.h  regrasHumidade.cpp  regrasHumidade.h  regrasLuz.cpp  regrasLuz.h  regrasRadiacao.cpp  regrasRadiacao.h  regrasSom.cpp  regrasSom.h  regrasTemperatura.cpp  regrasTemperatura.h  regrasVibracao.cpp  regrasVibracao.h
PooProjeto/Sensores/: headerSensores.h  sensTemperatura.cpp  sensTemperatura.h  sensorFumo.cpp  sensorFumo.h  sensorHumidade.cpp  sensorHumidade.h  sensorLuz.cpp  sensorLuz.h  sensorRadiacao.cpp  sensorRadiacao.h  sensorSom.cpp  sensorSom.h  sensorVibracao.cpp  sensorVibracao.h
PooProjeto/regrasitself/: RegraEqual.cpp  RegraEqual.h  maiorq.cpp  maiorq.h  menorq.cpp  menorq.h  regrabetween.cpp  regrabetween.h  regrait.cpp  regrait.h  rfora.cpp  rfora.h  typesRules.h
Projeto/: Aparelhos.h  CMakeLists.txt  Habitacao.h  Processador.h  Propriedades.h  Sensores.cpp  Zonas.cpp  Zonas.h  main.cpp
